--- a/Emparejados/src/Vista/EditorBarajaDorso.fxml
+++ b/Emparejados/src/Vista/EditorBarajaDorso.fxml
@@ -18,16 +18,16 @@
             <Font size="28.0" />
          </font>
       </Label>
-      <Label layoutX="25.0" layoutY="119.0" prefHeight="20.0" prefWidth="150.0" text="Selecciona  un dorso:">
+      <Label layoutX="25.0" layoutY="119.0" prefHeight="25.0" prefWidth="174.0" text="Selecciona  un dorso:">
          <font>
-            <Font size="16.0" />
+            <Font name="System Bold" size="16.0" />
          </font>
       </Label>
       <Button fx:id="buscar" layoutX="486.0" layoutY="112.0" mnemonicParsing="false" onMouseClicked="#buscarImagen" prefHeight="40.0" prefWidth="85.0" text="Buscar">
          <font>
             <Font name="System Bold" size="16.0" />
          </font></Button>
-      <ImageView fx:id="imagenCarta" fitHeight="150.0" fitWidth="200.0" layoutX="201.0" layoutY="169.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="imagenCarta" fitHeight="161.0" fitWidth="218.0" layoutX="210.0" layoutY="152.0" pickOnBounds="true" preserveRatio="true" />
       <Button fx:id="siguienteButton" layoutX="417.0" layoutY="334.0" mnemonicParsing="false" onMouseClicked="#elegirParejas" text="Elegir Parejas">
          <font>
             <Font name="System Bold" size="20.0" />
@@ -36,6 +36,9 @@
          <font>
             <Font name="System Bold" size="20.0" />
          </font></Button>
-      <Label fx:id="pathImagen" layoutX="221.0" layoutY="124.0" prefHeight="17.0" prefWidth="241.0" />
+      <Label fx:id="pathImagen" layoutX="210.0" layoutY="124.0" prefHeight="17.0" prefWidth="234.0">
+         <font>
+            <Font name="System Bold" size="14.0" />
+         </font></Label>
    </children>
 </Pane>
