--- a/Emparejados/src/application/estiloAzul.css
+++ b/Emparejados/src/application/estiloAzul.css
@@ -32,12 +32,39 @@
 }
 
 
-.choice-box{
-	-fx-background-color: white;
-	-fx-background-radius: 30;
-	-fx-border-color: #4b6aff;
-	-fx-border-radius: 20;
-	-fx-border-width: 5;
+.choice-box {
+    -fx-pref-width: 220;
+    -fx-background-color: white;
+    -fx-background-radius: 30;
+    -fx-border-color: #4b6aff;
+    -fx-border-radius: 20;
+    -fx-border-width: 5;
+    -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 20, 0, 0, 0);
+}
+
+.choice-box .context-menu {
+    -fx-pref-width: 220;
+    -fx-background-color: white;
+    -fx-background-radius: 30;
+    -fx-border-color: #4b6aff;
+    -fx-border-radius: 20;
+    -fx-border-width: 5;
+}
+
+.choice-box .menu-item:focused { 
+    -fx-background-color: white;
+    -fx-background-radius: 30;
+    -fx-border-color: #4b6aff;
+    -fx-border-radius: 20;
+    -fx-border-width: 5;
+}
+
+.choice-box .menu-item > .label { 
+    -fx-text-fill: #4b6aff;
+}
+
+.choice-box .menu-item:focused > .label { 
+    -fx-text-fill: #4b6aff;
 }
 
 
