--- a/Emparejados/src/application/estiloRojo.css
+++ b/Emparejados/src/application/estiloRojo.css
@@ -32,12 +32,39 @@
 	-fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 20, 0, 0, 0);
 }
 
-.choice-box{
-	-fx-background-color: white;
-	-fx-background-radius: 30;
-	-fx-border-color: red;
-	-fx-border-radius: 20;
-	-fx-border-width: 5;
+.choice-box {
+    -fx-pref-width: 220;
+    -fx-background-color: white;
+    -fx-background-radius: 30;
+    -fx-border-color: red;
+    -fx-border-radius: 20;
+    -fx-border-width: 5;
+    -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 20, 0, 0, 0);
+}
+
+.choice-box .context-menu {
+    -fx-pref-width: 220;
+    -fx-background-color: white;
+    -fx-background-radius: 30;
+    -fx-border-color: red;
+    -fx-border-radius: 20;
+    -fx-border-width: 5;
+}
+
+.choice-box .menu-item:focused { 
+    -fx-background-color: white;
+    -fx-background-radius: 30;
+    -fx-border-color: red;
+    -fx-border-radius: 20;
+    -fx-border-width: 5;
+}
+
+.choice-box .menu-item > .label { 
+    -fx-text-fill: red;
+}
+
+.choice-box .menu-item:focused > .label { 
+    -fx-text-fill: red;
 }
 
 .label{
