--- a/Emparejados/src/Vista/MenuPrincipal.fxml
+++ b/Emparejados/src/Vista/MenuPrincipal.fxml
@@ -1,76 +1,86 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="anchorPane" prefHeight="557.0" prefWidth="882.0" style="-fx-background-color: ffffff;" styleClass="fondoMenu" stylesheets="@../application/estiloAzul.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.ControladorMenuPrincipal">
+<AnchorPane fx:id="anchorPane" prefHeight="861.0" prefWidth="1050.0" style="-fx-background-color: ffffff;" styleClass="fondoMenu" stylesheets="@../application/estiloAzul.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.ControladorMenuPrincipal">
    <children>
-      <StackPane fx:id="circuloSonido" layoutX="398.0" layoutY="507.0" prefHeight="84.0" prefWidth="91.0" styleClass="fondoBoton">
+      <StackPane fx:id="circuloSonido" layoutX="483.0" layoutY="724.0" prefHeight="84.0" prefWidth="91.0" styleClass="fondoBoton">
          <children>
-            <ImageView fx:id="iconoSonido" fitHeight="54.0" fitWidth="58.0" onMouseClicked="#clickSound" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="iconoSonido" fitHeight="54.0" fitWidth="58.0" onMouseClicked="#sonidoHandler" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../imagenes/sonido_on.png" />
                </image>
             </ImageView>
          </children>
       </StackPane>
-      <ImageView fitHeight="224.0" fitWidth="565.0" layoutX="160.0" layoutY="36.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="224.0" fitWidth="565.0" layoutX="243.0" layoutY="35.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../imagenes/twins_logo.png" />
          </image>
       </ImageView>
-      <ImageView fitHeight="71.0" fitWidth="304.0" layoutX="558.0" layoutY="523.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="71.0" fitWidth="304.0" layoutX="692.0" layoutY="766.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../imagenes/by_twinsoft.png" />
          </image>
       </ImageView>
-      <ImageView fitHeight="127.0" fitWidth="185.0" layoutX="36.0" layoutY="436.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="165.0" fitWidth="217.0" layoutX="77.0" layoutY="658.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../imagenes/logo_menu.png" />
          </image>
       </ImageView>
-      <ScrollPane fx:id="scrollPane" layoutX="227.0" layoutY="155.0" prefHeight="344.0" prefWidth="464.0" style="-fx-background-color: transparent; -fx-vbar-policy: NEVER; -fx-hbar-policy: NEVER;">
-        <content>
-          <AnchorPane fx:id="anchorPane2" minHeight="0.0" minWidth="0.0" prefHeight="478.0" prefWidth="466.0" style="-fx-background-color: white;" styleClass="context-menu">
-               <children>
-                  <Button fx:id="salir" layoutX="38.0" layoutY="402.0" mnemonicParsing="false" onAction="#salirHandler" prefHeight="50.0" prefWidth="400.0" text="SALIR">
-                     <font>
-                        <Font name="System Bold" size="20.0" />
-                     </font>
-                  </Button>
-                  <Button fx:id="ajustes" layoutX="34.0" layoutY="248.0" mnemonicParsing="false" onAction="#ajustesHandler" prefHeight="50.0" prefWidth="400.0" text="AJUSTES">
-                     <font>
-                        <Font name="System Bold" size="20.0" />
-                     </font>
-                  </Button>
-                  <Button fx:id="partidaEstandar" layoutX="33.0" layoutY="14.0" mnemonicParsing="false" onAction="#partidaEstandarHandler" prefHeight="50.0" prefWidth="400.0" text="PARTIDA ESTÁNDAR">
-                     <font>
-                        <Font name="System Bold" size="20.0" />
-                     </font>
-                  </Button>
-                  <Button fx:id="modoLibre" layoutX="33.0" layoutY="170.0" mnemonicParsing="false" onAction="#modoLibreHandler" prefHeight="50.0" prefWidth="400.0" text="MODO LIBRE">
-                     <font>
-                        <Font name="System Bold" size="20.0" />
-                     </font>
-                  </Button>
-                  <Button fx:id="partidaCarta" layoutX="33.0" layoutY="91.0" mnemonicParsing="false" onAction="#partidaCartaHandler" prefHeight="50.0" prefWidth="400.0" text="PARTIDA POR CARTA">
-                     <font>
-                        <Font name="System Bold" size="20.0" />
-                     </font>
-                  </Button>
-                  <Button fx:id="editorBarajas" layoutX="38.0" layoutY="328.0" mnemonicParsing="false" onAction="#editorBarajasHandler" prefHeight="50.0" prefWidth="400.0" text="EDITOR DE BARAJAS">
-                     <font>
-                        <Font name="System Bold" size="20.0" />
-                     </font>
-                  </Button>
-               </children>
-            </AnchorPane>
-        </content>
-      </ScrollPane>
+      <Button fx:id="salir" layoutX="93.0" layoutY="75.0" mnemonicParsing="false" onAction="#salirHandler" prefHeight="54.0" prefWidth="105.0" text="SALIR">
+         <font>
+            <Font name="System Bold" size="20.0" />
+         </font>
+      </Button>
+      <StackPane fx:id="circuloUsuario" layoutX="869.0" layoutY="60.0" prefHeight="84.0" prefWidth="91.0" styleClass="fondoBoton">
+         <children>
+            <ImageView fx:id="iconoUsuario" fitHeight="54.0" fitWidth="58.0" onMouseClicked="#usuarioHandler" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../imagenes/usuario.png" />
+               </image>
+            </ImageView>
+         </children>
+      </StackPane>
+      <Button fx:id="partidaEstandar" layoutX="326.0" layoutY="192.0" mnemonicParsing="false" onAction="#partidaEstandarHandler" prefHeight="50.0" prefWidth="400.0" text="PARTIDA ESTÁNDAR">
+         <font>
+            <Font name="System Bold" size="20.0" />
+         </font>
+      </Button>
+      <Button fx:id="partidaCarta" layoutX="326.0" layoutY="268.0" mnemonicParsing="false" onAction="#partidaCartaHandler" prefHeight="50.0" prefWidth="400.0" text="PARTIDA POR CARTA">
+         <font>
+            <Font name="System Bold" size="20.0" />
+         </font>
+      </Button>
+      <Button fx:id="partidaCategoria" layoutX="326.0" layoutY="345.0" mnemonicParsing="false" onAction="#partidaCategoriaHandler" prefHeight="50.0" prefWidth="400.0" text="PARTIDA POR CATEGORÍA">
+         <font>
+            <Font name="System Bold" size="20.0" />
+         </font>
+      </Button>
+      <Button fx:id="partidaNiveles" layoutX="326.0" layoutY="422.0" mnemonicParsing="false" onAction="#partidaNivelesHandler" prefHeight="50.0" prefWidth="400.0" text="MODO POR NIVELES">
+         <font>
+            <Font name="System Bold" size="20.0" />
+         </font>
+      </Button>
+      <Button fx:id="partidaMultijugador" layoutX="326.0" layoutY="494.0" mnemonicParsing="false" onAction="#partidaMultijugadorHandler" prefHeight="50.0" prefWidth="400.0" text="MODO MULTIJUGADOR">
+         <font>
+            <Font name="System Bold" size="20.0" />
+         </font>
+      </Button>
+      <Button fx:id="editorBarajas" layoutX="326.0" layoutY="568.0" mnemonicParsing="false" onAction="#editorBarajasHandler" prefHeight="50.0" prefWidth="400.0" text="EDITOR DE BARAJAS">
+         <font>
+            <Font name="System Bold" size="20.0" />
+         </font>
+      </Button>
+      <Button fx:id="ajustes" layoutX="326.0" layoutY="641.0" mnemonicParsing="false" onAction="#ajustesHandler" prefHeight="50.0" prefWidth="400.0" text="AJUSTES">
+         <font>
+            <Font name="System Bold" size="20.0" />
+         </font>
+      </Button>
    </children>
 </AnchorPane>
