--- a/Emparejados/src/application/estiloDesierto.css
+++ b/Emparejados/src/application/estiloDesierto.css
@@ -1,4 +1,4 @@
 
 .fondoTablero{
-    -fx-background-image: url("/imagenes/desierto.jpg");
+    -fx-background-image: url("/imagenes/desierto.png");
 }
