--- a/Emparejados/src/Vista/PartidaCarta.fxml
+++ b/Emparejados/src/Vista/PartidaCarta.fxml
@@ -92,7 +92,7 @@
       </AnchorPane>
       <StackPane fx:id="stackPane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="772.0" prefWidth="1159.0">
          <children>
-            <GridPane fx:id="tablero" prefHeight="694.0" prefWidth="1159.0" styleClass="fondoTablero" stylesheets="@../application/estilo1.css">
+            <GridPane fx:id="tablero" prefHeight="694.0" prefWidth="1159.0" styleClass="fondoTablero">
               <columnConstraints>
                   <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                 <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
